# deep-research-agent

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  helpers.py  prompts.py
src/graphs/: deep_research_graph.py  researcher_graph.py  supervisor_graph.py  workflow_graph.py
src/models/: hf_models.py
src/nodes/: context_pruning_node.py  draft_generation.py  final_report_generation.py  intent_clarification.py  red_team_node.py  research_agent.py  research_brief.py  researcher_node.py  supervisor_node.py
src/states/: agent_state.py  researcher_state.py  supervisor_state.py
src/tools/: researcher_tools.py  supervisor_tools.py
