[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "ipython>=9.8.0",
    "langchain>=1.2.0",
    "langchain-huggingface>=1.2.0",
    "langgraph>=1.0.5",
    "pydantic-settings>=2.12.0",
    "pygraphviz>=1.14",
    "tavily>=1.1.0",
]
